# AIGlasses

./: CMakeLists.txt  CONFIG_GUIDE.md  CPP_EMBEDDING_GUIDE.md  EMBEDDING_MODEL_GUIDE.md  PACKAGING_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/aiglasses/: EmbedMatchResult.java  EmbeddingMatcher.java  EmbeddingMatcherActivity.java  MainActivity.java  ResourceManager.java
android/app/src/main/res/layout/: activity_embedding_matcher.xml  activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
include/: defect_config_loader.h  embedding_model.h  json_parser.h  resource_manager.h  semantic_matcher.h
lib/: ANDROID_INTEGRATION.md  BUILD_GUIDE.md  CMakeLists.txt  EMBEDDING_CONFIG_GUIDE.md  LINUX_SETUP.md  QUICKSTART.md  QUICK_TEST.md  QUICK_VERIFY.md  README.md  TESTING_GUIDE.md  TEST_RUNNER.md  build_android.bat  build_android.sh  build_desktop.sh  run_tests.sh  setup_linux.sh  test_library.cpp  verify_library.sh
lib/cmake/: ai_glasses-config.cmake.in
lib/include/: ai_glasses_jni.h  defect_config_loader.h  desktop_log.h  embedding_config.h  embedding_matcher.h  embedding_matcher_jni.h  embedding_model.h  jieba_segmenter.h  json_parser.h  semantic_matcher.h
lib/resources/: embedding_config.json
lib/resources/config/: defects_example.json
lib/src/: ai_glasses_jni.cpp  embedding_config.cpp  embedding_matcher.cpp  embedding_matcher_jni.cpp  embedding_model.cpp  jieba_segmenter.cpp  json_parser.cpp  semantic_matcher.cpp
resources/config/: defects_example.json
resources/models/: embedding.txt
src/: ai_glasses_jni.cpp  defect_config_loader.cpp  embedding_matcher.cpp  embedding_matcher_jni.cpp  embedding_model.cpp  jieba_segmenter.cpp  json_parser.cpp  resource_manager.cpp  semantic_matcher.cpp
test/: CMakeLists.txt  embedding_test.cpp  main.cpp
